# peft-doctor

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: validation_matrix.md
docs/: adapter_merge.md  advanced-features.md  before-after.md  beginner-command-guide.md  checks.md  colab.md  commands.md  compatibility-matrix.md  failure-gallery.md  privacy-and-security.md  publishing.md  reports-and-screenshots.md  troubleshooting.md
docs/case-studies/: cuda-oom-fixed.md  nan-loss-fixed.md  wrong-target-modules-fixed.md
examples/: merge_adapter_colab.py  peft-policy.yml  quickstart.py  training_preflight.py
recipes/completion_only_sft/: README.md  expected_output.md  requirements.txt  sample_data.jsonl  tested_environment.md  train.py
recipes/gemma_low_vram/: README.md  expected_output.md  sample_data.jsonl  tested_environment.md  train.py
recipes/llama3_qlora_colab/: README.md  expected_output.md  sample_data.jsonl  tested_environment.md  train.py
recipes/mistral_lora_local/: README.md  expected_output.md  sample_data.jsonl  tested_environment.md  train.py
recipes/qwen2_qlora_colab/: README.md  expected_output.md  sample_data.jsonl  tested_environment.md  train.py
src/peft_doctor/: __init__.py  adapters.py  advanced.py  cli.py  configs.py  datasets.py  diagnostics.py  environment.py  estimator.py  explain.py  fixer.py  logs.py  memory.py  notebooks.py  profiles.py  recipes.py  report.py  targets.py  utils.py
tests/: test_adapters.py  test_advanced_features.py  test_configs.py  test_datasets.py  test_diagnostics.py  test_environment.py  test_fixer.py  test_logs.py  test_notebooks.py  test_product_features.py  test_targets.py
