[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "peft-doctor"
version = "0.1.0"
description = "A practical pre-flight doctor for PEFT, LoRA, and QLoRA fine-tuning runs."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Awais Akhtar" }
]
keywords = [
  "peft",
  "lora",
  "qlora",
  "fine-tuning",
  "transformers",
  "llm",
  "machine-learning",
  "debugging"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Quality Assurance",
  "Typing :: Typed"
]
dependencies = [
  "packaging>=23.0",
  "rich>=13.7",
  "typer>=0.12",
  "typing-extensions>=4.8; python_version < '3.11'"
]

[project.optional-dependencies]
ml = [
  "accelerate>=0.28",
  "bitsandbytes>=0.43; platform_system != 'Windows'",
  "datasets>=2.18",
  "peft>=0.10",
  "protobuf>=4.25",
  "safetensors>=0.4",
  "sentencepiece>=0.1.99",
  "torch>=2.1",
  "transformers>=4.40",
  "trl>=0.8"
]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "ruff>=0.5",
  "twine>=5.0"
]

[project.urls]
Homepage = "https://github.com/awais-akhtar/peft-doctor"
Repository = "https://github.com/awais-akhtar/peft-doctor"
Issues = "https://github.com/awais-akhtar/peft-doctor/issues"
Documentation = "https://github.com/awais-akhtar/peft-doctor#readme"

[project.scripts]
peft-doctor = "peft_doctor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["B008", "E501"]
